@@ -5,8 +5,8 @@
 
 ;; Author: Mikio Nakajima <minakaji@osaka.email.ne.jp>
 ;; Maintainer: Mikio Nakajima <minakaji@osaka.email.ne.jp>
-;; Version: $Id: SKK-MK,v 1.31.2.1.2.21 2000/01/25 13:14:29 czkmt Exp $
-;; Last Modified: $Date: 2000/01/25 13:14:29 $
+;; Version: $Id: SKK-MK,v 1.31.2.1.2.22 2000/01/27 05:18:47 minakaji Exp $
+;; Last Modified: $Date: 2000/01/27 05:18:47 $
 
 ;; Commentary
 ;;
@@ -195,7 +195,7 @@ end with `skk'." )
 			    ;; EXPERIMENTAL
 			    skk-abbrev skk-dcomp
 			    skk-jisx0201 skk-rdbms skk-study
-			    skk-tutcdef skk-tutcode
+			    skk-tutcdef skk-tutcode skk-correct
 			    ;; VIP 3.7
 			    ;; vip
 			    )))
